<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:layout_column="0"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/name"
            android:textStyle="bold"
            android:background="#c0c0c0"
            >
        </TextView>
        <TextView
            android:layout_column="1"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/energy"
            android:textStyle="bold"
            android:background="#c0c0c0"
            >
        </TextView>
        <TextView
            android:layout_column="1"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/carbohydrate"
            android:textStyle="bold"
            android:background="#c0c0c0"
            >
        </TextView>
        <TextView
        android:layout_column="1"
        android:padding="10sp"
        android:gravity="start"
        android:text="@string/protein"
        android:textStyle="bold"
        android:background="#c0c0c0"
        >
        </TextView>
        <TextView
            android:layout_column="1"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/fat"
            android:textStyle="bold"
            android:background="#c0c0c0"
            >
        </TextView>
    </TableRow>
</TableLayout>