<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_add_food"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/add_food" />
        <item
            android:id="@+id/nav_adv_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search_food" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_cons_hist"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/consumption_history" />
    </group>

    <item android:title="Application" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
