<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bounswegroup2.eatright.FoodAddFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayoutAddFood">
        <TableRow>
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewIngr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/add_ingredient" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/amountEText"
            android:hint="@string/amount"
            android:ems="4"/>
         <ImageButton
             android:id="@+id/removeRow"
             android:src="@android:drawable/ic_delete"
             android:layout_width="wrap_content"
              />
        </TableRow>
    </TableLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/addFoodSubmitBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

    </LinearLayout>
</FrameLayout>
