<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:showDividers="middle"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/food_list_header_name"
            android:layout_column="0"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/name"
            android:textStyle="bold"
            android:background="#c0c0c0"
            android:layout_weight="1"
            android:drawableEnd="@android:drawable/arrow_up_float"
            >
        </TextView>
        <TextView
            android:id="@+id/food_list_header_rating"
            android:layout_column="1"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/rating"
            android:textStyle="bold"
            android:background="#c0c0c0"
            android:layout_weight="1"
            android:drawableEnd="@android:drawable/arrow_up_float"
            >
        </TextView>
        <TextView
            android:id="@+id/food_list_header_image"
            android:layout_column="2"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/image"
            android:textStyle="bold"
            android:layout_weight="1"
            android:clickable="false"
            android:background="#c0c0c0"
            >
        </TextView>
    </TableRow>
</TableLayout>