<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewSearch"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie_range"
            android:id="@+id/CalorieTExtView"
            android:layout_alignTop="@+id/seekbarForCalorie"
            android:layout_centerHorizontal="true" />

        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekbarForCalorie"
            app:absoluteMaxValue="2500"
            app:absoluteMinValue="0" />
    <TextView
        android:text="@string/protein_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbarForCalorie"
        android:layout_alignEnd="@+id/CalorieTExtView"
        android:layout_marginTop="13dp" />

        <TextView
        android:text="@string/fat_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rangeSeekBarForPro"
        android:layout_alignStart="@+id/CalorieTExtView"
        android:layout_marginTop="11dp"
        android:id="@+id/textViewFatRange" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingr_listview"
            android:layout_below="@+id/multiAutoCompleteTextView1"
            android:choiceMode="multipleChoiceModal"
            android:visibility="gone"/>

        <TextView
            android:text="@string/carbonhydrate_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_below="@+id/seekBarForFat"
            android:layout_alignStart="@+id/textViewFatRange" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:gravity="bottom"
            android:id="@+id/searchFood"
            android:layout_below="@+id/seekBarForCab"
            android:layout_toEndOf="@+id/textView8"
            android:textAlignment="center"/>

        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Tags"
            android:maxLines="1"
            android:gravity="bottom"
            android:id="@+id/saveTags"
            android:layout_below="@+id/seekBarForCab"
            android:layout_toEndOf="@+id/textView8"
            android:textAlignment="center"/>

        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rangeSeekBarForPro"
            app:absoluteMaxValue="1000"
            app:absoluteMinValue="0"
            android:layout_below="@+id/CalorieTExtView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp" />

        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:absoluteMaxValue="1000"
            app:absoluteMinValue="0"
            android:id="@+id/seekBarForCab"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/textViewFatRange"
            android:layout_alignParentStart="true" />

        <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:absoluteMaxValue="1000"
            app:absoluteMinValue="0"
            android:id="@+id/seekBarForFat"
            android:layout_below="@+id/rangeSeekBarForPro"
            android:layout_alignParentStart="true" />

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/allergic_ingredient"
            android:layout_below="@+id/seekBarForCab"
            android:layout_alignParentStart="true"
            android:ems="10"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="bottom"
            android:hint="Tags"
            android:id="@+id/editTextTag"
            android:maxLines="1"
            android:layout_alignBaseline="@+id/multiAutoCompleteTextView1"
            android:layout_alignBottom="@+id/multiAutoCompleteTextView1"
            android:layout_toEndOf="@+id/multiAutoCompleteTextView1"
             />


    </RelativeLayout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_food_search_fragment"
        android:layout_below="@id/scrollViewSearch">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@id/android:list" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tagListView"
            android:visibility="gone"/>
    </FrameLayout>

</RelativeLayout>





